tests/error/modifier_errors/flag_classic_fun_dagger1.err
Error: Dagger constraint violation (at $FILE:13:8)
   | 
11 | def test() -> None:
12 |     with dagger:
13 |         foo()
   |         ^^^^^ This function cannot be called in a daggerable context

Help: Consider adding the flag `(daggerable=True)` to the decorator of the
function `foo`

Guppy compilation failed due to 1 previous error
